<resources>
    <string name="app_name">Ordenes e Inventario</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ordenes e Inventario</string>
    <string name="nav_header_subtitle">Gestión de Ordenes e Inventario</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Inicio</string>
    <string name="str_menu_online">Inventario Online</string>
    <string name="str_menu_local">Inventario Local</string>
    <string name="str_menu_ordenes">Ordenes</string>
    <string name="str_menu_clientes">Clientes</string>
    <string name="str_menu_sincronizar">Sincronizar</string>

    <string name="str_tituloOnline">Listado de productos (Online)</string>
    <string name="str_online">Online</string>
    <string name="str_local">Local</string>
    <string name="str_descripcionImg">Imagen del producto</string>
    <string name="str_tituloLocal">Listado de productos (Local)</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
