<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_local"
            android:icon="@android:drawable/ic_menu_agenda"
            android:title="@string/str_menu_local" />
        <item
            android:id="@+id/nav_online"
            android:icon="@android:drawable/stat_sys_download"
            android:title="@string/str_menu_online" />
        <item
            android:id="@+id/nav_ordenes"
            android:icon="@android:drawable/ic_input_get"
            android:title="@string/str_menu_ordenes" />
        <item
            android:id="@+id/nav_clientes"
            android:icon="@android:drawable/ic_menu_my_calendar"
            android:title="@string/str_menu_clientes" />
        <item
            android:id="@+id/nav_sincronizar"
            android:icon="@android:drawable/stat_notify_sync_noanim"
            android:title="@string/str_menu_sincronizar" />
    </group>

</menu>
